0.4?
    - Include an example filter script, lbs-filter-gpg, for encrypting
      segment data as it is written.

0.3 [2007-08-10]
    - LOCAL DATABASE CHANGE: A checksums file is now written out along
      with the snapshot descriptor that contains checksums of segments
      used in a snapshot.  This will allow quick integrity checks of a
      snapshot, without needing to decompress or decrypt the segment
      files.  The local database schema was modified to store the
      checksums for segments.
    - Build dependence on libtar has been dropped.  All necessary
      support for writing TAR files is now directly included with the
      source.
    - The snapshot format is now documented, at least in part.  See
      format.txt.
    - Snapshots now include link count and inode number for files with
      multiple hard links, so that a restore program could determine
      which files should be hard linked on restore.  The reference
      restore.pl script does not use this.
    - Bugfix: Print a help message instead of crashing if no files are
      specified.
    - Bugfix: File descriptors of files being backed up were closed
      twice.  In some cases this might have led to an unrelated file
      being closed (if the file descriptor was quickly re-used).
    - Preview of a new lbs-util command for maintaining snapshots.
      Functionality is currently limited.

0.2.2 [2007-07-27]
    - Update reference restore.pl script to handle octal/hexadecimal
      (format change introduced in 0.2).
    - Better support for mixing multiple backup schemes: the statcache
      file is now per-scheme, so performance should be better in cases
      where multiple different backups (of different source directories)
      are made, all sharing the same local database directory.

0.2.1 [2007-07-20]
    - Bugfix: Do not print an error when only one directory is specified
      to back up.

0.2 [2007-07-20]